--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
   "dependencies": {
     "async": "^2.1.4",
     "aws-sdk": "^2.7.13",
-    "body-parser": "~1.15.2",
+    "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.3",
     "crypto": "0.0.3",
-    "debug": "~2.2.0",
-    "ejs": "^2.5.2",
-    "express": "~4.14.0",
-    "jade": "~1.11.0",
-    "morgan": "~1.7.0",
+    "debug": "^2.6.9",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "jade": "^0.29.0",
+    "morgan": "^1.10.0",
     "mysql": "^2.12.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "^2.5.0"
   }
 }
