--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 .cache/
 node_modules/
 npm-debug.log
-# .elasticbeanstalk/
+.elasticbeanstalk/
+.ebextensions/
 
 # Elastic Beanstalk Files
 # .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
 
-.DS_Store
+.DS_Store/
 .env
