--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ npm-debug.log
 # .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+routes/*.js
 
+create_table.js
 .DS_Store
 .env
